--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd-mobile": "^5.7.1",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
