--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "2.3.0",
     "sass": "^1.49.9",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
