--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
+    "ahooks": "^3.3.0",
     "antd-mobile": "^5.7.1",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
