--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.11.0",
     "dompurify": "^2.3.6",
+    "highlight.js": "^11.5.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
