--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 REACT_APP_IO = 'http://geek.itheima.net'
 REACT_APP_URL = 'http://geek.itheima.net/v1_0'
+REACT_APP_URL = 'http://toutiao.itheima.net/v1_0'
